--- a/explore_GEE.ipynb
+++ b/explore_GEE.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "explore_GEE.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOeMdeKjaaYYOZRq8f2pHSx",
+      "authorship_tag": "ABX9TyNpfNVKSa1ez75htx+4Omqp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,6 +127,110 @@
             "Successfully installed affine-2.3.0 rasterio-1.1.3 snuggs-1.4.7\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uiTvy31hzdKr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        },
+        "outputId": "86c6f92c-923a-419a-ffc3-7fe0e7ea5c46"
+      },
+      "source": [
+        "# Trigger the authentication flow.\n",
+        "ee.Authenticate()\n",
+        "\n",
+        "# Initialize the library.\n",
+        "ee.Initialize()"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "To authorize access needed by Earth Engine, open the following URL in a web browser and follow the instructions. If the web browser does not start automatically, please manually browse the URL below.\n",
+            "\n",
+            "    https://accounts.google.com/o/oauth2/auth?client_id=517222506229-vsmmajv00ul0bs7p89v5m89qs8eb9359.apps.googleusercontent.com&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fearthengine+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdevstorage.full_control&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&response_type=code\n",
+            "\n",
+            "The authorization workflow will generate a code, which you should paste in the box below. \n",
+            "Enter verification code: 4/wwGo4LQSJVuJnVhVW_S30-VYkomCA8nmvJEXZGSiCDkb_LgaVD3qpHk\n",
+            "\n",
+            "Successfully saved authorization token.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UlXrNNgzzlxe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7c1050a1-7cd3-43aa-8fb4-51790ccae6a8"
+      },
+      "source": [
+        "# Print the elevation of Mount Everest.\n",
+        "dem = ee.Image('USGS/SRTMGL1_003')\n",
+        "xy = ee.Geometry.Point([86.9250, 27.9881])\n",
+        "elev = dem.sample(xy, 30).first().get('elevation').getInfo()\n",
+        "print('Mount Everest elevation (m):', elev)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mount Everest elevation (m): 8729\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xWx83YT6zrXx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 277
+        },
+        "outputId": "d1299572-ca35-45ff-a36c-2d58e6599310"
+      },
+      "source": [
+        "# Import the Image function from the IPython.display module. \n",
+        "from IPython.display import Image\n",
+        "\n",
+        "# Display a thumbnail of global elevation.\n",
+        "Image(url = dem.updateMask(dem.gt(0))\n",
+        "  .getThumbUrl({'min': 0, 'max': 4000, 'dimensions': 512,\n",
+        "                'palette': ['006633', 'E5FFCC', '662A00', 'D8D8D8', 'F5F5F5']}))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<img src=\"https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/ac58af12d5e0be1d7310f2a584b586be-3ac614aaf556c7d1f8ae21e257ecbc6c:getPixels\"/>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Image object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
         }
       ]
     }
